# wayfarer-bridge

./: .gitignore  KNOWN_ISSUES.md  README.md  RELEASING.md  pyproject.toml  wfb.py  wfb_chrome_bridge.py  wfb_chrome_session.py  wfb_db.py  wfb_gemini_api.py  wfb_gemini_sessions.py  wfb_oauth.py  wfb_paths.py
.cursor/rules/: wfb.mdc
docs/: chrome_remote_debug_bridge.md  gemini_session_discovery.md
tests/: test_wfb.py  test_wfb_chrome_bridge.py  test_wfb_gemini_api.py  test_wfb_gemini_sessions.py
